[gd_scene load_steps=3 format=3 uid="uid://bsxjmd3ctua3m"]

[ext_resource type="Script" uid="uid://c3w5v6upwg4wd" path="res://UI/level_selection.gd" id="1_amei5"]
[ext_resource type="FontFile" uid="uid://6wtxqi1tje8" path="res://assets/Fonts/Dead Revolver Typeface/Dead Revolver Typeface/Fonts/Game/OTF/DeadRevolverGame.otf" id="2_sq6jl"]

[node name="LevelSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_amei5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
offset_right = 512.0
offset_bottom = 768.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="GameTitleContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="GameTitleDrop" type="Label" parent="Panel/MarginContainer/VBoxContainer/GameTitleContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0.862745, 1, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("2_sq6jl")
theme_override_font_sizes/font_size = 60
text = "Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTitleLoop" type="Label" parent="Panel/MarginContainer/VBoxContainer/GameTitleContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0.862745, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0.792157, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("2_sq6jl")
theme_override_font_sizes/font_size = 60
text = "Selection"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25
alignment = 1

[node name="LevelOne" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../LevelTwo")
focus_next = NodePath("../LevelTwo")
text = "Level 1"

[node name="LevelTwo" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../LevelOne")
focus_neighbor_bottom = NodePath("../LevelThree")
focus_next = NodePath("../LevelThree")
focus_previous = NodePath("../LevelOne")
text = "Foot Race"

[node name="LevelThree" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../LevelTwo")
focus_neighbor_bottom = NodePath("../BackButton")
focus_next = NodePath("../BackButton")
focus_previous = NodePath("../LevelTwo")
text = "U -Turn"

[node name="LevelFour" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../LevelTwo")
focus_neighbor_bottom = NodePath("../BackButton")
focus_next = NodePath("../BackButton")
focus_previous = NodePath("../LevelTwo")
text = "Winding Path"

[node name="LevelFive" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../LevelTwo")
focus_neighbor_bottom = NodePath("../BackButton")
focus_next = NodePath("../BackButton")
focus_previous = NodePath("../LevelTwo")
text = "Drop, Loop"

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../LevelThree")
focus_previous = NodePath("../LevelThree")
text = "Back	"

[node name="FontTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelOne" to="." method="_on_entered"]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelOne" to="." method="_on_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelOne" to="." method="_on_level_one_pressed"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelTwo" to="." method="_on_entered"]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelTwo" to="." method="_on_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelTwo" to="." method="_on_level_two_pressed"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelThree" to="." method="_on_entered"]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelThree" to="." method="_on_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelThree" to="." method="_on_level_three_pressed"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelFour" to="." method="_on_entered"]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelFour" to="." method="_on_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelFour" to="." method="_on_level_four_pressed"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelFive" to="." method="_on_entered"]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelFive" to="." method="_on_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/LevelFive" to="." method="_on_level_five_pressed"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/BackButton" to="." method="_on_entered"]
[connection signal="mouse_entered" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/BackButton" to="." method="_on_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="timeout" from="FontTimer" to="." method="_on_font_timer_timeout"]
